     support StateDirectory (issue seen at least with systemd 232 in Debian 9)
   - Debian and Red Hat init.d example files had wrong path for the pid file
   - Interfaces could end up staying marked as 'disabled' in the database even
     after becoming back active and monitored, only the shown status was wrong
     without resulting in any data loss
 - New
   - Automatic interface selection when the Interface configuration setting
     is left empty (new default)
   - Add configuration option DatabaseWriteAheadLogging to enable SQLite
     Write-Ahead Logging mode which may provide some disk i/o benefits,
     see https://www.sqlite.org/wal.html for more details and note that
     SQLite 3.22.0 or later is required to support read-only operations
   - Add configuration option DatabaseSynchronous for changing the SQLite
     setting of the "synchronous" flag, see
     https://www.sqlite.org/pragma.html#pragma_synchronous for more details
   - Show warning in log if writing cached data to database is slow
   - Try database query for up to 5 seconds when database is busy or locked
     instead of giving up immediately
   - Continue daemon process execution with data caching if database writes
     fail due to disk being full


2.2 / 28-Apr-2019

 - Fixed
   - O_CLOEXEC undeclared error when compiling with glibc older than 2.12
   - Image output --headertext wasn't being applied to some output types
   - DefaultDecimals setting wasn't controlling all outputs
   - Traffic rate for the last entry of the 5 minute resolution list wasn't
     being correctly calculated
 - New
   - Detection of 32-bit / 64-bit kernel interface counters for improving
     traffic calculations in rollover situations, cfg: 64bitInterfaceCounters
   - Possibility in queries to merge data from multiple interfaces to one
     output with interface1+interface2 syntax
   - Highlight current day in top list when visible
   - Changes in interface specific detected bandwidth limits are reported